src/objects/Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Business_Rule__c</fullName>
        <label>Business Rule</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Vision__c</fullName>
        <label>Business Vision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Background__c</fullName>
        <label>CR Background</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <controllingField>SolutionType__c</controllingField>
            <picklistValues>
                <fullName>Record Types / Page Layouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Level Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom link / button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Batch Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOAP Web Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk API Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF Component</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Requirement - no grandchildren.</description>
        <label>Parent Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SolutionType__c</fullName>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Out-of-the-Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Statement__c</fullName>
        <description>Requirement Statement</description>
        <label>Statement</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Description__c</fullName>
        <label>Technical Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Parent Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ParentRequirement__c</columns>
        <columns>Statement__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>SolutionType__c</columns>
        <columns>Component_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Req-{0000}</displayFormat>
        <label>Req ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <recordTypes>
        <fullName>Application_Requirement</fullName>
        <active>true</active>
        <label>Application Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Rule</fullName>
        <active>true</active>
        <label>Business Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>ChangeRequest</fullName>
        <active>true</active>
        <label>Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Requirement</fullName>
        <active>true</active>
        <label>Parent Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement</fullName>
        <active>true</active>
        <label>Requirement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Grandparents</fullName>
        <active>true</active>
        <description>A Parent Requirement cannot have a Parent Requirement.</description>
        <errorConditionFormula>ISPICKVAL(  Type__c , &quot;Parent Requirement&quot; ) &amp;&amp; ( NOT (ISBLANK( ParentRequirement__c) ) )</errorConditionFormula>
        <errorMessage>A Parent Requirement cannot have a Parent Requirement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Orphans</fullName>
        <active>true</active>
        <description>Requirements that are not &quot;Parent Requirement&quot; must have a Parent Requirement</description>
        <errorConditionFormula>ISBLANK(  ParentRequirement__c  ) &amp;&amp;  NOT(  ISPICKVAL( Type__c , &quot;Parent Requirement&quot;)  )</errorConditionFormula>
        <errorMessage>A Business Rule, Application Requirement, or Change Request must relate to a Parent Requirement.</errorMessage>
    </validationRules>
</CustomObject>